2013-05-05  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: Fix a bug that KANJI info of the last char in \hbox
	was lost.

2013-04-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptrip/ptrip.diffs: Update for TL 2013.

2013-04-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptex-base.ch: 3.3 ---> 3.4 for TL 2013.

2013-03-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/ptex.am: Better rule for ptex_version.h.

2013-02-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid spurious failures of parallel tests.
	* am/ptex.am, nissya.test, pbibtex.test, pdvitype.test,
	ppltotf.test, ptftopl.test, sample.test, yokotate.test:
	Change directory for temporary files from tests to ptests.
	* pbibtex-longline-test.pl: Use plongline.aux as input together
	with longline.bib from source tree.

	* pbibtex-openout-test.pl: Fix the input file location.

2013-01-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/ptex.am, pbibtex-mem.test, ptrip.test:
	Enable parallel-tests.

2013-01-04  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: \xkanjiskip around math_node etc.

2012-12-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/ptex.am (ptex_version.h): Enable silent rules.

2012-11-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptex-base.ch: Remove native buffer printing code.

2012-11-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptex-base.ch (cs_error): Remove "endmubyte" code.

2012-08-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ppltotf.ch: Remove putc kludge, convert knows (u)ppltotf.

	* kanji.c (init_default_kanji): Set defaults before testing
	PTEX_KANJI_ENC from the environment.
	* kanji.c: WIN32 defaults differ, except for pBibTeX.

2012-07-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/ptex.am: Distribute ptex_version.h.

2012-07-17  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: fix a bug in
	@<Scan an alphabetic character code into |cur_val|@>

2012-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
