@@ -29,8 +29,6 @@ pproglib = lib/libp.a
 # Rebuild $(pproglib)
 $(pproglib): $(KPATHSEA_DEPEND) ${srcdir}/lib/*.c
 	cd lib && $(MAKE) $(AM_MAKEFLAGS) libp.a
-## Rebuild libptexenc
-@PTEXENC_RULE@
 
 ## libkanji.a for pTeX and e-pTeX
 ##
